<resources>
    <string name="app_name">Mantenimiento Infraestructura IPLAN</string>
    <string name="msj_delete_item">Se eliminará el Elemento, desea continuar?</string>
    <string name="label_yes">SI</string>
    <string name="label_no">NO</string>
    <string name="agregar_nombre">Debe ingresar el nombre del Elemento.</string>
    <string name="atencion">Atención!</string>
    <string name="stringIn">en</string>
    <string name="guardando_info">Guardando información...</string>
    <string name="seleccione_datacenter">Debe seleccionar un Datacenter!</string>
    <string name="alerta_nuevo_form">Se iniciará un nuevo Formulario (no será accesible el Formulario actual), desea continuar?</string>
    <string name="completar_datos">Debe seleccionar un Datacenter e ingresar una descripción del Formulario para comenzar con la carga de Elementos!</string>
    <string name="datacenter">DATACENTER</string>
    <string name="tecnico">TECNICO</string>
    <string name="load_datacenters">Cargando Datacenters...</string>
    <string name="nuevo_form">Nuevo Formulario</string>
    <string name="login_error">Usuario o Contraseña incorrecto!</string>
    <string name="conexion_server_error">No es posible conectarse con el Servidor!</string>
    <string name="login_progress">Intentando Loguearse...</string>
    <string name="titulo1">INFRAESTRUCTURA DATACENTER</string>
    <string name="titulo2">IPLAN</string>
    <string name="titulo3">MANTENIMIENTO DIARIO</string>
    <string name="temperatura">Temp:</string>
    <string name="temperatura_hint">Temp ºC</string>
    <string name="observaciones">Observaciones:</string>
    <string name="guardar">Guardar</string>
    <string name="observaciones_hint">OBSERVACIONES</string>
    <string name="funcionaOk">Funciona OK</string>
    <string name="idLabel">ID:</string>
    <string name="idHint">ID</string>
    <string name="comp1ok">Comp1 OK</string>
    <string name="loadLabel">Load:</string>
    <string name="loadHint">Load %</string>
    <string name="comp2Ok">Comp2 OK</string>
    <string name="outLabel">Out:</string>
    <string name="outHint">Out ºC</string>
    <string name="qrInvalido">El código QR no es válido</string>
    <string name="arranque">Arranque</string>
    <string name="correas">Correas</string>
    <string name="engrase">Engrase</string>
    <string name="limpieza">Limpieza</string>
    <string name="cancelar">Cancelar</string>
    <string name="comb">Comb:</string>
    <string name="combHint">Comb%</string>
    <string name="alarma">Alarma</string>
    <string name="autoLabel">Auto</string>
    <string name="cargadorBat">Cargador Bat</string>
    <string name="preCalent">Pre Calent</string>
    <string name="nivelComb">Nivel Comb 75%</string>
    <string name="energiaA">Energia A OK</string>
    <string name="energiaB">Energia B OK</string>
    <string name="presion">Presión:</string>
    <string name="presionHint">PRESION</string>
    <string name="usuario">Usuario:</string>
    <string name="usuarioHint">USUARIO</string>
    <string name="contrasenia">Contraseña:</string>
    <string name="contraseniaHint">CONTRASEÑA</string>
    <string name="recordarPsw">RECORDAR INGRESO</string>
    <string name="aireOk">Aire OK</string>
    <string name="presionAire">Presión Aire</string>
    <string name="aguaOk">Agua OK</string>
    <string name="presionAguaHint">Presión Agua</string>
    <string name="encendido">Encendido</string>
    <string name="tiempo">Tiempo</string>
    <string name="potenciaCorriente">Potencia/Corriente</string>
    <string name="kwr">[Kw] R:</string>
    <string name="kwrHint">Kw-R</string>
    <string name="arLabel">[A] R:</string>
    <string name="arHint">A-R</string>
    <string name="kws">[Kw] S:</string>
    <string name="kwsHint">Kw-S</string>
    <string name="asLabel">[A] S:</string>
    <string name="asHint">A-S</string>
    <string name="kwt">[Kw] T:</string>
    <string name="kwtHint">Kw-T</string>
    <string name="atLabel">[A] T:</string>
    <string name="atHint">A-T</string>
    <string name="pottotRA">PotTot RA:</string>
    <string name="pottotRAHint">POT-TOT RA</string>
    <string name="pottotRB">PotTot RB:</string>
    <string name="pottotRBHint">POT-TOT RB</string>
    <string name="percentR">R:</string>
    <string name="percentRHint">R %</string>
    <string name="percentS">S:</string>
    <string name="percentSHint">S %</string>
    <string name="percentT">T:</string>
    <string name="percentTHint">T %</string>
    <string name="menu_seleccionar_datacenter">Seleccione Datacenter</string>
    <string name="menu_edit_form">Editar Formulario</string>
    <string name="menu_scan_qr">Escanear QR</string>
    <string name="menu_nuevo_form">Nuevo Formulario</string>
    <string name="mensaje_select_exportar_excel">Seleccione formato del reporte en Excel:</string>
    <string name="coma_separated">USA/UK CSV file ( , )</string>
    <string name="puntocoma_separated">CSV/DSV file ( ; )</string>
    <string name="mensaje_sin_artefactos">No hay elementos cargados para generar el Reporte.</string>
    <string name="error_exportar_csv">No es posible generar el Reporte.</string>
    <string name="mensaje_exito_exportar_csv">El Reporte fue generado con éxito.</string>
    <string name="menu_generate_csv">Generar Reporte (Excel)</string>
    <string name="loginLabel">Ingresar</string>
    <string name="fm200">FM 200 OK</string>
    <string name="pprimLabel">PPrim:</string>
    <string name="psecLabel">PSec:</string>
    <string name="pprimHint">Pprim (kg/cm2)</string>
    <string name="psecHint">Psec (kg/cm2)</string>
    <string name="signo_porcentaje">%</string>
    <string name="signo_kgcm2">Kg/cm2</string>
    <string name="signo_gradosCelsius">ºC</string>
    <string name="signo_menos200kw"><![CDATA[< 200kw]]></string>
    <string name="selectName">Seleccione...</string>
    <string name="minlabel">MIN</string>
    <string name="maxlabel">MAX</string>
    <string name="app_expired">Esto es una versión de prueba y ha caducado.</string>
</resources>
