<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="@color/color_blanco"
    android:layout_gravity="center">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="clip_horizontal">

        <TextView
            android:id="@+id/itemIdLabel"
            android:gravity="end"
            android:text="@string/idLabel"
            android:layout_marginEnd="3dp"
            android:textColor="@color/color_negro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/itemId"
            android:hint="@string/idHint"
            android:maxLength="30"
            android:inputType="text"
            android:layout_marginStart="3dp"
            android:backgroundTint="@color/color_gris"
            android:textColorHint="@color/color_gris"
            android:textColor="@color/color_negro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/genericName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectName"
            android:textSize="18sp"
            android:layout_marginStart="3dp"
            style="?android:attr/buttonBarButtonStyle"

            />

    </LinearLayout>



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginStart="10dp"
        android:layout_gravity="center|clip_horizontal">

    <CheckBox android:id="@+id/arranque"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/arranque" android:textSize="13sp" android:layout_marginTop="10dp"
        android:textColor="@color/color_negro"
        />

    <CheckBox android:id="@+id/correas"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/correas" android:textSize="13sp" android:layout_marginTop="10dp"
        android:textColor="@color/color_negro"
        />


    <CheckBox android:id="@+id/engrase"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/engrase" android:textSize="13sp" android:layout_marginTop="10dp"
        android:textColor="@color/color_negro"
        />

    <CheckBox android:id="@+id/funcionamiento"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/funcionaOk" android:textSize="13sp" android:layout_marginTop="10dp"
        android:textColor="@color/color_negro"/>



    <CheckBox android:id="@+id/limpieza"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginTop="10dp" android:text="@string/limpieza" android:textSize="13sp"
        android:textColor="@color/color_negro"
        />

    <CheckBox android:id="@+id/tiempo"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginTop="10dp" android:text="@string/tiempo" android:textSize="13sp"
        android:textColor="@color/color_negro"
        />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="@color/color_negro"
            android:text="@string/observaciones" />

        <EditText android:id="@+id/entryDescripcion" android:hint="@string/observaciones_hint"
            android:inputType="textCapSentences|textMultiLine"
            android:layout_height="wrap_content"
            android:textColor="@color/color_negro"
            android:padding="5dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="4dp"
            android:layout_width="match_parent"
            android:maxLength="150"
            android:gravity="top|start"
            android:lines="4"
            android:singleLine="false"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="3dp"
            android:minLines="1"
            android:maxLines="4"
            android:scrollHorizontally="false"
            android:scrollbars="vertical"
            android:textColorHint="@color/color_gris"
            android:importantForAutofill="no" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center|center_horizontal"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSaveData"
            android:layout_width="wrap_content"
            android:text="@string/guardar"
            android:layout_height="42dp"
            android:fontFamily="sans-serif"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="17dp"
            android:textColor="@color/color_blanco"
            android:background="@drawable/custom_button" />

    </LinearLayout>
</LinearLayout>