<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_blanco"
    android:layout_margin="10dp"
    android:layout_gravity="start">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@color/color_gris_oscuro">

            <TextView
                android:id="@+id/formName"
                android:gravity="start"
                android:text=""
                android:textColor="@color/color_blanco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>



    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_margin="15dp">


        <TextView
            android:gravity="start"
            android:text="@string/observaciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/formDescEntry"
            android:hint="@string/observaciones_hint"
            android:inputType="textCapSentences|textMultiLine"
            android:layout_height="wrap_content"
            android:textColor="@color/color_negro"
            android:padding="5dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="4dp"
            android:layout_width="match_parent"
            android:maxLength="150"
            android:gravity="top|start"
            android:lines="4"
            android:singleLine="false"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="3dp"
            android:minLines="1"
            android:maxLines="4"
            android:scrollHorizontally="false"
            android:scrollbars="vertical"
            android:textColorHint="@color/color_gris"
            android:importantForAutofill="no" />

    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="15dp"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/cancelFormButton"
            android:layout_width="wrap_content"
            android:text="@string/cancelar"
            android:layout_height="42dp"
            android:gravity="center_vertical|center_horizontal"
            android:fontFamily="sans-serif"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginEnd="25dp"
            android:textSize="17dp"
            android:textColor="@color/color_blanco"
            android:textAllCaps="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/saveFormButton"
            android:layout_width="wrap_content"
            android:text="@string/guardar"
            android:layout_height="42dp"
            android:gravity="center_vertical|center_horizontal"
            android:fontFamily="sans-serif"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="17dp"
            android:textColor="@color/color_blanco"
            android:textAllCaps="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button"
            style="?android:attr/buttonBarButtonStyle"/>





        </LinearLayout>


</LinearLayout>

